# cbrkit-demo

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
cbrkit_demo/: __main__.py  model.py  retrieval.py
data/: casebase.json
data/taxonomies/: manufacturer.yaml  paint_color.yaml
tests/: case_in_taxonomy_check.py
